clippy-lib-bins.txt
    Checking axum v0.7.9
    Checking riptide-types v0.1.0 (/workspaces/eventmesh/crates/riptide-types)
    Checking opentelemetry_sdk v0.26.0
    Checking reqwest v0.12.24
    Checking wasmtime-wasi v37.0.2
   Compiling riptide-extraction v0.1.0 (/workspaces/eventmesh/crates/riptide-extraction)
    Checking riptide-stealth v0.1.0 (/workspaces/eventmesh/crates/riptide-stealth)
    Checking reqwest v0.11.27
    Checking redis v0.26.1
    Checking riptide-search v0.1.0 (/workspaces/eventmesh/crates/riptide-search)
    Checking riptide-config v0.1.0 (/workspaces/eventmesh/crates/riptide-config)
    Checking tracing-opentelemetry v0.27.0
    Checking riptide-security v0.1.0 (/workspaces/eventmesh/crates/riptide-security)
    Checking riptide-pdf v0.1.0 (/workspaces/eventmesh/crates/riptide-pdf)
    Checking chromiumoxide v0.7.0
    Checking spider_chrome v2.37.128
    Checking pprof v0.15.0
   Compiling riptide-extractor-wasm v0.1.0 (/workspaces/eventmesh/wasm/riptide-extractor-wasm)
    Checking config v0.14.1
    Checking utoipa v5.4.0
    Checking tonic v0.12.3
    Checking axum-prometheus v0.7.0
    Checking riptide-test-utils v0.1.0 (/workspaces/eventmesh/crates/riptide-test-utils)
    Checking riptide-browser-abstraction v0.1.0 (/workspaces/eventmesh/crates/riptide-browser-abstraction)
error[E0464]: multiple candidates for `rmeta` dependency `chromiumoxide` found
 --> crates/riptide-browser-abstraction/src/spider_impl.rs:7:5
  |
7 | use chromiumoxide::{Browser as SpiderBrowser, Page as SpiderPage};
  |     ^^^^^^^^^^^^^
  |
  = note: candidate #1: /workspaces/eventmesh/target/x86_64-unknown-linux-gnu/debug/deps/libchromiumoxide-6138dbdf33117b47.rmeta
  = note: candidate #2: /workspaces/eventmesh/target/x86_64-unknown-linux-gnu/debug/deps/libchromiumoxide-dd68e4f686af106f.rmeta

    Checking opentelemetry-proto v0.26.1
For more information about this error, try `rustc --explain E0464`.
error: could not compile `riptide-browser-abstraction` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
